InternexDev_Sandbox/src/objects/Due_change__c.object
<CustomObject>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Due changes</relationshipLabel>
        <relationshipName>Due_changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Due_Since__c</fullName>
        <label>Interest Due Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Due_Since__c</fullName>
        <label>UL Fee Due Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Due change</label>
    <nameField>
        <displayFormat>IDC-{000000}</displayFormat>
        <label>Due change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>